Bug 1814074 - Make `AutoDeleteRangesHandler::ExtendOrShrinkRangeToDelete` consider whether all list items are selected more carefully r=m_kato

It currently check range boundaries are start/end of a list element.  However,
there are a lot of cases.  E.g., selection can starts and/or ends inner
position due to invisible white-spaces and sub-lists.

The expectations of the new tests are based on Chrome's result.  However,
unfortunately, the joining result of sub-lists is different from Chrome.
Therefore, they fail.  (Gecko makes each list element has one list item.)

Differential Revision: https://phabricator.services.mozilla.com/D169037